# anita-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  rustfmt.toml
.github/workflows/: rust.yml
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  main.rs  shutdown.rs
crates/api/src/handlers/: auth.rs  health.rs  key.rs  mod.rs
crates/errors/: Cargo.toml
crates/errors/src/: actix.rs  error.rs  lib.rs
crates/keys/: Cargo.toml
crates/keys/src/: context.rs  key.rs  keygen.rs  keypair.rs  lib.rs  solana.rs
crates/storage/: Cargo.toml
crates/storage/migrations/2024-06-19-025207_create_keys/: down.sql  up.sql
crates/storage/migrations/2024-07-17-035047_create_users/: down.sql  up.sql
crates/storage/migrations/2024-07-26-025207_create_keys/: down.sql  up.sql
crates/storage/src/: database.rs  error.rs  lib.rs  pg.rs  schema.rs
crates/storage/src/handlers/: auth.rs  keys.rs  mod.rs  users.rs
crates/storage/src/models/: chain.rs  keys.rs  mod.rs  users.rs  version.rs
crates/storage/src/utils/: encryption.rs  hash.rs  mod.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
