[workspace]
members = [
	"bin",
	"crates/api",     # svc api
	"crates/errors",  # svc errors
	"crates/keys",    # svc manager
	"crates/storage", # svc storage
	"crates/tracing", # svc tracing
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# builtin
anita = { path = "bin" }
r-api = { path = "crates/api" }
r-errors = { path = "crates/errors" }
r-keys = { path = "crates/keys" }
r-storage = { path = "crates/storage" }
r-tracing = { path = "crates/tracing" }

# external
anyhow = "1.0.72"
argon2 = "0.5"
dotenvy = "0.15.7"
thiserror = "1.0.43"
tracing = "0.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
rayon = "1.10"

clap = { version = "4", features = ["derive"] }
eyre = "0.6.12"

# validator
validator = "0.18.1"

# actix
actix-web = { version = "4.8.0" }
actix-identity = "0.7"

# async
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
tokio = { version = "1.38.0", default-features = false }

# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# external enum
strum = { version = "0.26", features = ["derive"] }
strum_macros = { version = "0.26" }

# reqwest
reqwest = "0.12.4"

# [patch.crates-io.curve25519-dalek]
# git = "https://github.com/solana-labs/curve25519-dalek.git"
# rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
