[package]
name = "r-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
actix-web = { version = "4.8.0" }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-identity = "0.7"
actix-utils = "3"

bs58 = "0.5.1"

dotenvy = "0.15.7"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# internal
r-storage = { workspace = true }
r-tracing = { workspace = true }
r-keys = { workspace = true }
r-errors = { workspace = true, features = ["actix"] }

# opentelemetry
opentelemetry = { version = "0.20.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }
opentelemetry-jaeger = { version = "0.19.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }

# tracing
# tracing = "0.1.37" # use the workspace version
# tracing-error = "0.2.0" # use the workspace version
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.8"


tokio = { version = "1.29.0", features = ["full"] }
actix-web-opentelemetry = { version = "0.18.0", features = ["metrics"] }

[dev-dependencies]
reqwest = { workspace = true }
