[package]
name = "r-keys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

r-storage = { path = "../storage" }
r-tracing = { path = "../tracing" }

strum = { version = "0.26", features = ["derive"] }
strum_macros = { version = "0.26" }

solana-sdk = "2.0.0"
zeroize = "1.3.0"
