[package]
name = "r-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# database
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.2", default-features = false, features = [
	"postgres",
	"chrono",
] }
diesel-async = { git = "https://github.com/weiznich/diesel_async", default-features = false, features = [
	"bb8",
	"postgres",
	"async-connection-wrapper",
] }
diesel_migrations = { version = "2.2.0" }

[dev-dependencies]
dotenvy = "0.15.7"
