[package]
name = "r-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-tracing = { workspace = true }

thiserror = { workspace = true }
argon2 = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

aes-gcm = { version = "0.10.3" }

# database
diesel = { version = "2.2.1", default-features = false, features = [
	"chrono",
	"postgres",
] }
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = '74867bd68', default-features = false, features = [
	"bb8",
	"postgres",
	"async-connection-wrapper",
] }
diesel_migrations = { version = "2.2.0" }

hex = "0.4.1"
rand = "0.8.5"
openssl = "0.10.52"
async-trait = "0.1.50"

[dev-dependencies]
dotenvy = "0.15.7"
