[package]
name = "r-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
# opentelemetry = { workspace = true }
# opentelemetry-jaeger = { workspace = true }

opentelemetry = { version = "0.19.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }
opentelemetry-jaeger = { version = "0.18.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }

tracing-subscriber = { version = "0.3", default-features = false, features = [
	"env-filter",
	"fmt",
] }
tracing-appender = "0.2"
tracing-journald = "0.3"
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.9"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.19.0"
